bbb
Error when compiling the Java code of file './material/code-generation-tests/OK_GER01.java' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER01.java:3: error: cannot find symbol
        new Program().run();
                     ^
  symbol:   method run()
  location: class Program
./material/code-generation-tests/OK_GER01.java:9: error: cannot find symbol
        Out.print(7, " ");
        ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:11: error: cannot find symbol
            Out.print(0, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:14: error: cannot find symbol
            Out.print(1, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:17: error: cannot find symbol
            Out.print(2, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:20: error: cannot find symbol
            Out.print(3, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:23: error: cannot find symbol
            Out.print(4, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:26: error: cannot find symbol
            Out.print(5, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:29: error: cannot find symbol
            Out.print(6, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:32: error: cannot find symbol
            Out.print(7, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:35: error: cannot find symbol
            Out.print(18, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:38: error: cannot find symbol
            Out.print(10, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:41: error: cannot find symbol
            Out.print(11, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:44: error: cannot find symbol
            Out.print(12, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:47: error: cannot find symbol
            Out.print(13, " ");
            ^
  symbol:   variable Out
  location: class A
./material/code-generation-tests/OK_GER01.java:50: error: cannot find symbol
            Out.print(14, " ");
            ^
  symbol:   variable Out
  location: class A
16 errors
Cianeto compiler finished
